--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -1,10 +1,8 @@
 <div fxLayout="column" fxLayoutAlign="space-between center">
     <mat-card class="post-card">
         <mat-card-header>
-            <img *ngIf="post.question.profilePic!=''" mat-card-avatar class="post-header-image"
-                src={{post.question.profilePic}} alt="">
-            <img *ngIf="post.question.profilePic==''" mat-card-avatar class="post-header-image"
-                src='../../assets/images/noDisplay.png' alt="">
+            <img *ngIf="post.question.profilePic.length>0" mat-card-avatar class="post-header-image" src={{post.question.profilePic}} alt="">
+            <img *ngIf="post.question.profilePic.length==0" mat-card-avatar class="post-header-image" src='../../assets/images/noDisplay.png' alt="">
 
             <mat-card-title>{{post.question.heading}}</mat-card-title>
             <mat-card-subtitle>{{post.question.user}}</mat-card-subtitle>
@@ -14,36 +12,34 @@
             <div>
                 <div mat-line> {{post.question.description}} </div>
                 <br>
-                <button mat-icon-button id="votes"
-                    matBadge={{post.question.upvotes.length-post.question.downvotes.length}}
-                    matBadgeColor="primary">Votes</button>
+                <button mat-icon-button id="votes" matBadge={{post.question.upvotes.length-post.question.downvotes.length}} matBadgeColor="primary">Votes</button>
                 <div mat-line></div>
                 <div mat-line></div>
                 <mat-divider></mat-divider>
             </div>
         </mat-card-content>
         <mat-card-actions *ngIf="currentUser!=post.question.user && upvotedQues">
-            <button mat-icon-button style="color: forestgreen;" (click)="upvote('Question',post.question._id,0)">
-                <mat-icon>expand_less</mat-icon>
+            <button mat-icon-button style="color: forestgreen;background-color: rgb(155, 218, 155);" (click)="upvote('Question',post.question._id,0)">
+                <mat-icon>arrow_drop_up</mat-icon>
             </button>
             <button mat-icon-button (click)="downvote('Question',post.question._id,0)">
-                <mat-icon>expand_more</mat-icon>
+                <mat-icon>arrow_drop_down</mat-icon>
             </button>
         </mat-card-actions>
         <mat-card-actions *ngIf="currentUser!=post.question.user && downvotedQues">
             <button mat-icon-button (click)="upvote('Question',post.question._id,0)">
-                <mat-icon>expand_less</mat-icon>
+                <mat-icon>arrow_drop_up</mat-icon>
             </button>
-            <button mat-icon-button style="color: red" (click)="downvote('Question',post.question._id,0)">
-                <mat-icon>expand_more</mat-icon>
+            <button mat-icon-button style="color: red; background-color: rgb(255, 153, 153);" (click)="downvote('Question',post.question._id,0)">
+                <mat-icon>arrow_drop_down</mat-icon>
             </button>
         </mat-card-actions>
         <mat-card-actions *ngIf="currentUser!=post.question.user && !downvotedQues && !upvotedQues">
             <button mat-icon-button (click)="upvote('Question',post.question._id,0)">
-                <mat-icon>expand_less</mat-icon>
+                <mat-icon>arrow_drop_up</mat-icon>
             </button>
             <button mat-icon-button (click)="downvote('Question',post.question._id,0)">
-                <mat-icon>expand_more</mat-icon>
+                <mat-icon>arrow_drop_down</mat-icon>
             </button>
         </mat-card-actions>
         <mat-card-actions *ngIf="currentUser==post.question.user">
@@ -60,45 +56,42 @@
     <div *ngFor="let answer of post.answers;index as i">
         <mat-card class="post-card">
             <mat-card-header>
-                <img *ngIf="answer.profilePic!=''" mat-card-avatar class="post-header-image" src={{answer.profilePic}}
-                    alt="">
-                <img *ngIf="answer.profilePic==''" mat-card-avatar class="post-header-image"
-                    src='../../assets/images/noDisplay.png' alt="">
+                <img *ngIf="answer.profilePic.length>0" mat-card-avatar class="post-header-image" src={{answer.profilePic}} alt="">
+                <img *ngIf="answer.profilePic.length==0" mat-card-avatar class="post-header-image" src='../../assets/images/noDisplay.png' alt="">
                 <mat-card-subtitle>{{answer.user}}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
                 <div>
                     <div mat-line> {{answer.description}} </div>
                     <br>
-                    <button mat-icon-button id="votes" matBadge={{answer.upvotes.length-answer.downvotes.length}}
-                        matBadgeColor="primary">Votes</button>
+                    <button mat-icon-button id="votes" matBadge={{answer.upvotes.length-answer.downvotes.length}} matBadgeColor="primary">Votes</button>
                     <div mat-line></div>
                     <div mat-line></div>
                     <mat-divider></mat-divider>
                 </div>
             </mat-card-content>
             <mat-card-actions *ngIf="currentUser!=answer.user && upvotedAns[i]">
-                <button mat-icon-button style="color: forestgreen;" (click)="upvote('Answer',answer._id,i)">
-                    <mat-icon>expand_less</mat-icon>
+                <button mat-icon-button style="color: forestgreen;background-color: rgb(155, 218, 155);" (click)="upvote('Answer',answer._id,i)">
+                    <mat-icon>arrow_drop_up</mat-icon>
                 </button>
                 <button mat-icon-button (click)="downvote('Answer',answer._id,i)">
-                    <mat-icon>expand_more</mat-icon>
+                    <mat-icon>arrow_drop_down</mat-icon>
                 </button>
             </mat-card-actions>
             <mat-card-actions *ngIf="currentUser!=answer.user && downvotedAns[i]">
                 <button mat-icon-button (click)="upvote('Answer',answer._id,i)">
-                    <mat-icon>expand_less</mat-icon>
+                    <mat-icon>arrow_drop_up</mat-icon>
                 </button>
-                <button mat-icon-button style="color: red" (click)="downvote('Answer',answer._id,i)">
-                    <mat-icon>expand_more</mat-icon>
+                <button mat-icon-button style="color: red; background-color: rgb(255, 153, 153)" (click)="downvote('Answer',answer._id,i)">
+                    <mat-icon>arrow_drop_down</mat-icon>
                 </button>
             </mat-card-actions>
             <mat-card-actions *ngIf="currentUser!=answer.user && !downvotedAns[i] && !upvotedAns[i]">
                 <button mat-icon-button (click)="upvote('Answer',answer._id,i)">
-                    <mat-icon>expand_less</mat-icon>
+                    <mat-icon>arrow_drop_up</mat-icon>
                 </button>
                 <button mat-icon-button (click)="downvote('Answer',answer._id,i)">
-                    <mat-icon>expand_more</mat-icon>
+                    <mat-icon>arrow_drop_down</mat-icon>
                 </button>
             </mat-card-actions>
             <mat-card-actions *ngIf="currentUser==answer.user">
