Changed file path

--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -4,7 +4,7 @@
             <img *ngIf="post.question.profilePic!=''" mat-card-avatar class="post-header-image"
                 src={{post.question.profilePic}} alt="">
             <img *ngIf="post.question.profilePic==''" mat-card-avatar class="post-header-image"
-                src='../../assets/images/noDisplay.png' alt="">
+                src='./assets/images/noDisplay.png' alt="">
 
             <mat-card-title>{{post.question.heading}}</mat-card-title>
             <mat-card-subtitle>{{post.question.user}}</mat-card-subtitle>
@@ -63,7 +63,7 @@
                 <img *ngIf="answer.profilePic!=''" mat-card-avatar class="post-header-image" src={{answer.profilePic}}
                     alt="">
                 <img *ngIf="answer.profilePic==''" mat-card-avatar class="post-header-image"
-                    src='../../assets/images/noDisplay.png' alt="">
+                    src='./assets/images/noDisplay.png' alt="">
                 <mat-card-subtitle>{{answer.user}}</mat-card-subtitle>
             </mat-card-header>
             <mat-card-content>
